--- a/_posts/2016-09-03-2016-study-plan.md
+++ b/_posts/2016-09-03-2016-study-plan.md
@@ -10,3 +10,6 @@ tags:
   It has been a long day since new term begins. Numerous life trivial needs to be done, such as purchasing house and living things, going through all the formalities, and etc.
 
 </div>
+The whole year's work depends on a good start. Since I am studying for a doctor's degree, I need to develop all kinds of ability to improve myself, such as
+- the ability to lead a team. I always insist that the difference between doctor and master is that a doctor has enough time to develop his or her team-leading ability. A new problem comes, a doctor is supposed to be clear about it, and guide his team to solve it in a short time.
+- 
