--- a/_posts/2016-09-03-2016-study-plan.md
+++ b/_posts/2016-09-03-2016-study-plan.md
@@ -29,6 +29,7 @@ Numerous books need to be read.
 - Mahout...
 
 Besides the above, I also have to spare some time to get a driver license.
+I also want to take part in some programming contest, such as **ACM/ICPC, or CCPC**, and etc, which are very interesting.
 
 **MAN, CHEER UP!**
 
