--- a/_posts/2016-09-03-2016-study-plan.md
+++ b/_posts/2016-09-03-2016-study-plan.md
@@ -15,7 +15,7 @@ tags:
   The whole year's work depends on a good start. Since I am studying for a doctor's degree, I need to develop all kinds of ability to improve myself, such as
 
 - the ability to lead a team. I always insist that the difference between doctor and master is that a doctor has enough time to develop his or her team-leading ability. A new problem comes, a doctor is supposed to be clear about it, and guide his team to solve it in a short time.
-- the ability of programming. I also believe that a doctor's programming ability should not no less that a master's.
+- the ability of programming. I also believe that a doctor's programming ability should not no less than a master's.
 - the capacity for scientific resaerch. A doctor should keep him updated about the latest development on his domain, and be clear about its strengths and weaknesses.
 
 Actions speak louder than words. This year I have to learn some basic knowledge on **distributed computing, compilation technology and data mining**.
