--- a/posts/2018-02-26-ndarray.html.md
+++ b/posts/2018-02-26-ndarray.html.md
@@ -28,7 +28,7 @@ Many C++11 new features has been applied during its implementation, e.g. Rvalue 
 - [2] <span id="eigen_page">Eigen official page: <http://eigen.tuxfamily.org/> </span>
 - [3] <span id="wiki_meta">Template Meta Programming, wiki page: <https://en.wikipedia.org/wiki/Template_metaprogramming> </span>
 - [4] <span id="eigen_lazy">Eigen Lazy Evaluation and Aliasing, <http://eigen.tuxfamily.org/dox/TopicLazyEvaluation.html> </span>
-- [5] <span id="eigen_tensor">Eigen Tensor: <https://bitbucket.org/eigen/eigen/src/677c9f1577810e869f4f09881cabc3e503a810c1/unsupported/Eigen/CXX11/src/Tensor/README.md> </span>
+- [5] <span id="eigen_tensor">Eigen Tensor, checkout its [README](https://bitbucket.org/eigen/eigen/src/677c9f1577810e869f4f09881cabc3e503a810c1/unsupported/Eigen/CXX11/src/Tensor/README.md) </span>
 - [6] <span id="taco_page">TACO official page: <http://tensor-compiler.org> </span>
 - [7] <span id="taco_pr">TACO presentation: <http://groups.csail.mit.edu/commit/presentations/2017/tensor-compiler.pdf> </span>
 
